misc/rgw_tls/ingress/external-rgw-endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-rgw-service
  namespace: openstack
subsets:
- addresses:
  - ip: 192.168.122.100
  - ip: 192.168.122.101
  - ip: 192.168.122.102
  ports:
  - port: 8082
    protocol: TCP
