misc/rgw_tls/ingress/external-rgw-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-rgw-service
  namespace: openstack
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8082
    protocol: TCP
